eclipse-workspace/Surya Dev Org/src/objects/ZTS_Events__c.object
<CustomObject>
    <fields>
        <fullName>Speaker_ID_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the Contact SFDC ID reference for Speaker # 1

Zoetis</description>
        <label>Speaker ID 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Speaker ID 1)</relationshipLabel>
        <relationshipName>Event_Speaker_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_ID_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker ID 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Speaker ID 2)</relationshipLabel>
        <relationshipName>Event_Speaker_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker_ID_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the Contact SFDC ID reference for Speaker # 3

Zoetis</description>
        <label>Speaker ID 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Speaker ID 3)</relationshipLabel>
        <relationshipName>Event_Speaker_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZTS_US_End_Date__c</fullName>
        <description>Zoetis</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Event_Category__c</fullName>
        <description>Zoetis</description>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>CPAC</fullName>
                </value>
                <value>
                    <fullName>Educational Meeting</fullName>
                </value>
                <value>
                    <fullName>Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Premium Services</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Value Added Services</fullName>
                </value>
                <value>
                    <fullName>Poultry Events</fullName>
                </value>
                <value>
                    <fullName>Marketing Meeting</fullName>
                </value>
                <value>
                    <fullName>Speaker Event – Online Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZTS_US_Location__c</fullName>
        <description>Zoetis</description>
        <label>Location</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Name__c</fullName>
        <description>zoetis</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Purpose_Agenda__c</fullName>
        <label>Purpose/Agenda</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Status__c</fullName>
        <description>Zoetis</description>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Re-approval Required</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZTS_US_Type__c</fullName>
        <description>Zoetis</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ZTS_US_Event_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>BRD Solutions</fullName>
                </value>
                <value>
                    <fullName>Breeding Soundness Exams (BSE)</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Calf &amp; Heifer Solutions</fullName>
                </value>
                <value>
                    <fullName>Cash Donations</fullName>
                </value>
                <value>
                    <fullName>Cattle General</fullName>
                </value>
                <value>
                    <fullName>Charitable Event</fullName>
                </value>
                <value>
                    <fullName>Continuing Education Support</fullName>
                </value>
                <value>
                    <fullName>Contract Distributor Programs</fullName>
                </value>
                <value>
                    <fullName>Cooperative Advertising</fullName>
                </value>
                <value>
                    <fullName>Customer surveys (DRC)</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
                <value>
                    <fullName>Employee Training</fullName>
                </value>
                <value>
                    <fullName>Equine General</fullName>
                </value>
                <value>
                    <fullName>EquineInternalParaContrl</fullName>
                </value>
                <value>
                    <fullName>Equine Lameness</fullName>
                </value>
                <value>
                    <fullName>ES - Equine Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>ES - Equine Vet Meeting</fullName>
                </value>
                <value>
                    <fullName>FRANK</fullName>
                </value>
                <value>
                    <fullName>Full Day Wet Lab</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>Half Day Wet Lab</fullName>
                </value>
                <value>
                    <fullName>Impromptu event</fullName>
                </value>
                <value>
                    <fullName>In Clinic/hospital</fullName>
                </value>
                <value>
                    <fullName>In Clinic Promotional Material</fullName>
                </value>
                <value>
                    <fullName>Information Sharing</fullName>
                </value>
                <value>
                    <fullName>IPC – Event (Pork Only)</fullName>
                </value>
                <value>
                    <fullName>Join the Cause</fullName>
                </value>
                <value>
                    <fullName>Large Group Roundtable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_CE_credits__c</fullName>
        <description>zoetis</description>
        <label># of CE credits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVE-{0000}</displayFormat>
        <label>Events Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>